Fixed the overlapping in Assignments/Editor.

--- a/src/Kanbas/Courses/Assignments/Editor/index.css
+++ b/src/Kanbas/Courses/Assignments/Editor/index.css
@@ -36,7 +36,6 @@
 }
 
 .wd-bottom-section {
-    padding-left: 100px;
     padding-right: 100px;
 }
 
